<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group
        android:id="@+id/menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Home"/>

        <item
            android:id="@+id/profile"
            android:title="@string/title_1" />

        <item
            android:id="@+id/timetable"
            android:title="@string/title_2" />

        <item
            android:id="@+id/reminders"
            android:title="@string/title_3" />

        <item
            android:id="@+id/courses"
            android:title="@string/title_4" />

        <item
            android:id="@+id/attendance"
            android:title="@string/title_5" />
    </group>

</menu>