<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginVertical="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_background"
        android:padding="15dp">

        <TextView
            android:id="@+id/eval_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eval_type"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/eval_type_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:entries="@array/eval_type_values"
            android:background="@color/cardview_light_background"/>

        <Button
            android:id="@+id/select_eval_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eval_type"
            android:layout_marginVertical="10dp"
            android:text="@string/select_eval_date_button"/>

        <TextView
            android:id="@+id/eval_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_eval_date_button"
            android:layout_marginVertical="10dp" />

        <ImageButton
            android:id="@+id/button_delete_eval_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="10dp"
            android:background="@color/card_background"
            android:contentDescription="@string/add_icon_description"
            android:src="@drawable/delete_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>