<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="10"
        android:columnCount="6"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:text="  "/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center"
            android:text="@string/sunday"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center"
            android:text="@string/monday"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center"
            android:text="@string/tuesday"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center"
            android:text="@string/wednesday"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center"
            android:text="@string/thursday"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="1"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="2"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="3"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="4"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="5"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="6"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="7"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="8"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/popup_padding"
            android:layout_gravity="center_vertical"
            android:text="9"/>

        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>
        <include layout="@layout/popup_button"/>

    </GridLayout>

    <Button
        android:id="@+id/done_button_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_done"
        android:layout_gravity="center"/>

</LinearLayout>