<?xml version="1.0" encoding="utf-8"?>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:navigationIcon="@drawable/arrow_back"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:id="@+id/course_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/course_name_et"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/course_name_tv"
                android:layout_marginStart="40dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/instructor_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor"
                app:layout_constraintTop_toBottomOf="@id/course_name_tv"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/instructor_name_et"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="@id/course_name_et"
                app:layout_constraintTop_toBottomOf="@id/course_name_et"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/classes_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/class_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/classes_section"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/evaluation_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluation_component_tv"
                app:layout_constraintTop_toBottomOf="@id/class_list_view"
                app:layout_constraintStart_toStartOf="parent" />

            <ListView
                android:id="@+id/eval_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/evaluation_section"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
